# clipboard-history

./: .gitignore  CMakeLists.txt  README.md
src/: ClipboardItem.cpp  ClipboardItem.h  ClipboardManager.cpp  ClipboardManager.h  HistoryItemWidget.cpp  HistoryItemWidget.h  HistoryPanel.cpp  HistoryPanel.h  ThemeManager.cpp  ThemeManager.h  TrayManager.cpp  TrayManager.h  main.cpp
src/resources/: app.qrc
